# ai-social-content-generator

./: .env.example  .gitignore  README.md  README_ES.md  docker-compose.yml
.agents/skills/testing-content-generator/: SKILL.md
.github/workflows/: ci.yml
backend/: README.md  pyproject.toml
backend/src/: main.py
backend/src/api/: routes.py
backend/src/core/: config.py  database.py
backend/src/models/: post.py
backend/src/services/: generator.py
backend/tests/: test_api.py  test_generator.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx
